[tool:pytest]
testpaths = "config_modules_vmware/tests"
markers =
    patch_classes
    patch_functions

[coverage:run]
source = config_modules_vmware
omit = */site-packages/*, */distutils/*, */tests/*, config_modules_vmware/framework/clients/vcenter/dependencies/pyVmomi/*, config_modules_vmware/framework/clients/vcenter/dependencies/pyVim/*, config_modules_vmware/framework/clients/vcenter/dependencies/vsan_management/*

[metadata]
license = BSD-2-Clause+Patent
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
url = https://github.com/vmware/vmware-config-modules
project_urls =
    Issues = https://github.com/vmware/vmware-config-modules/issues
    Changelog = https://github.com/vmware/vmware-config-modules/blob/master/CHANGELOG.md

[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    functional_tests*
    config_modules_vmware.tests*
